fdo#77728: Don't forget to start listening after the named range update.

Change-Id: I7a4160db0dd2b9ac2c98402bb6110c548e879b3d
(cherry picked from commit 36e0d770928f71c932db5dea9f04645f65222ea6)